modules/infra/node_sg.tf
resource "aws_security_group" "node" {
  name        = "${var.platform_name}-node"
  description = "Cluster node group for ${var.platform_name}"

  ingress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    security_groups = ["${aws_security_group.bastion.id}"]
  }

  ingress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"
    self      = true
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = "${merge(map(
    "kubernetes.io/cluster/${var.platform_name}", "owned",
    "Type", "${var.platform_name}-node",
    "Role", "node",
    ),
    "${module.label.tags}"
    )
  }"

  vpc_id = "${data.aws_vpc.platform.id}"
}
