modules/infra/public_sg.tf
# FOR Public LB
resource "aws_security_group" "public" {
  name        = "${var.platform_name}-public"
  description = "Public group for ${var.platform_name}"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["${var.public_cidrs}"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["${var.public_cidrs}"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = "${merge(map(
    "kubernetes.io/cluster/${var.platform_name}", "owned",
    "Type", "${var.platform_name}-public"
  ),
    "${module.label.tags}"
    )
  }"

  vpc_id = "${data.aws_vpc.platform.id}"
}
